fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   max-width: 1120px;
   margin: 240px auto;
   transition: background-color 0.3s;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 p {
